Integrate logo in otel

--- a/pkg/otel/active_spans.html
+++ b/pkg/otel/active_spans.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Active OpenTelemetry spans</title>
+		<link href="{{favicon_url}}" rel="icon">
 		<style>{{stylesheet}}</style>
 	</head>
 	<body>
